# GwasQcPipeline

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  GwasQcWrapper.py  GwasQcWrapper.py~  README.md  Snakefile  Snakefile_v1  Snakefile_v1~  cgr_gwas_qc-0.1.2-py3-none-any.whl  create_cgr-dev.out  docs.out  genindex.html  index.html  mypy.ini  objects.inv  poetrybuild.out  poetryinstall.out  poetryinstall.output  pre-commit_install.out  pre-commit_run.out  py-modindex.html  pyproject.toml  pytest.out  search.html  searchindex.js
.github/workflows/: github-actions-demo.yml  python-deploy.yml  python-package.yml
_modules/: index.html  pathlib.html
_modules/cgr_gwas_qc/: config.html
_modules/cgr_gwas_qc/cli/: config.html  pre_flight.html  snakemake.html  submit.html
_modules/cgr_gwas_qc/parsers/: bim.html  bpm.html  eigensoft.html  graf.html  king.html  plink.html
_modules/cgr_gwas_qc/testing/: data.html
_sources/: index.rst.txt
_sources/api/: cgr_gwas_qc.rst.txt  parsers.rst.txt  workflow.rst.txt
_sources/dev_docs/: dev_tools.rst.txt  setup.rst.txt  testing.rst.txt
_sources/getting_started/: configuration.rst.txt  installation.rst.txt  running_pipeline.rst.txt
_sources/reference/: cli.rst.txt
_sources/sub_workflows/: contamination.rst.txt  delivery.rst.txt  entry_points.rst.txt  sample_qc.rst.txt  subject_qc.rst.txt
_static/: documentation_options.js
api/: cgr_gwas_qc.html  cli.html  config.html  parsers.html  workflow.html
dev_docs/: building_docs.html  dev_tools.html  documentation.html  running_tests.html  setup.html  source_code.html  testing.html  writing_docs.html
docs/: Makefile  common_urls.rst  conf.py  index.rst
docs/api/: cgr_gwas_qc.rst  cli.rst  config.rst  parsers.rst  workflow.rst
docs/dev_docs/: building_docs.rst  documentation.rst  setup.rst  source_code.rst  testing.rst  writing_docs.rst
docs/getting_started/: conda.rst  configuration.rst  docker.rst  installation.rst  running_pipeline.rst
docs/qc_modules/: reporting.rst  sample_level.rst  variant_level.rst
docs/reference/: cli.rst  file_types.rst  rules.rst
docs/static/: Thumbs.db
docs/static/css/: custom.css
docs/sub_workflows/: contamination.rst  delivery.rst  entry_points.rst  intensity_check.rst  reporting.rst  sample_qc.rst  subject_qc.rst
getting_started/: configuration.html  installation.html  running_pipeline.html
modules/: Snakefile_HWP  Snakefile_ancestry  Snakefile_autosomal_het  Snakefile_bed_preprocess  Snakefile_count_exclusions  Snakefile_delivery  Snakefile_doc  Snakefile_gtc_contam  Snakefile_gtc_preprocess  Snakefile_idat_intensity  Snakefile_identifiler  Snakefile_pca  Snakefile_ped_preprocess  Snakefile_plink_contam  Snakefile_plink_stats_filters  Snakefile_plot_completion  Snakefile_plot_sex  Snakefile_remove_qc_failures  Snakefile_remove_related  Snakefile_replicate_concordance  Snakefile_sample_qc_report  Snakefile_sample_qc_report_20200222  Snakefile_split_pop  Snakefile_subject_ancestry  Snakefile_subject_level  Snakefile_subject_qc_fail
qc_modules/: reporting.html  sample_level.html  variant_level.html
reference/: cli.html  file_types.html  rules.html
scripts/: gtc2plink_TOP.py
src/cgr_gwas_qc/: __init__.py  conda.py  config.py  exceptions.py  paths.py  testing.py  typing.py  version.py  yaml.py
src/cgr_gwas_qc/cli/: GwasQcWrapper.py  __init__.py  __init__copy.py  bim_filter_vcf.py  bpm2abf.py  cgems_copy.py  config.py  gtc2adpc.py  gtc2plink.py  hello_cli.py  pre_flight.py  snakemake.py  snakemake.py.orig  submit.py  submit_orig.py  version.py
src/cgr_gwas_qc/cluster_profiles/: __init__.py  cluster.yaml  snakemake.sh
src/cgr_gwas_qc/data_validation/: gtc.py  idat.py
src/cgr_gwas_qc/models/: __init__.py  config.py  env_modules.py  software_params.py
src/cgr_gwas_qc/parsers/: __init__.py  adpc.py  bim.py  bpm.py  common.py  eigensoft.py  graf.py  king.py  plink.py  sample_sheet.py  vcf.py  verifyidintensity.py
src/cgr_gwas_qc/reporting/: QC_Report_Data_Dictionary.xlsx  __init__.py  constants.py  qc_exclusions.py  sample_qc.py  subject_qc.py  summary_stats.txt.jinja2  templating.py
src/cgr_gwas_qc/scripts/: legacy_compare.py
src/cgr_gwas_qc/testing/: Thumbs.db  __init__.py  compare_graf.py  comparison.py  conda.py  data.py  graf_test.py
src/cgr_gwas_qc/validators/: __init__.py  bgzip.py  bpm.py  gtc.py  idat.py  sample_sheet.py
src/cgr_gwas_qc/workflow/: Snakefile
src/cgr_gwas_qc/workflow_legacy/: Snakefile
start_with_gtc/: Snakefile  Snakefile~
start_with_plink_bed/: Snakefile  Snakefile~
start_with_plink_ped/: Snakefile  Snakefile~
sub_workflows/: contamination.html  delivery.html  entry_points.html  intensity_check.html  reporting.html  sample_qc.html  subject_qc.html
tests/: conftest.py  test_config.py  test_hello_world.py  test_real_data_cache.py  test_snakemake_job_grouping.py
tests/cli/: conftest.py  test_cgems_copy.py  test_config.py  test_pre_flight.py  test_submit.py
tests/cluster_profiles/: test_cgems.py  test_cgems_status.py  test_cluster_profiles.py
tests/models/: test_config_data_model.py
tests/parsers/: test_bim.py  test_eigensoft.py  test_graf.py  test_illumina_bpm.py  test_illumina_gtc.py  test_king.py  test_plink.py  test_sample_sheet_parser.py  test_vcf.py  test_verifyidintensity.py
tests/regression/: test_bim_filter_vcf.py  test_convert_bpm_to_abf.py  test_convert_gtc_to_plink.py  test_gtc2adpc.py
tests/reporting/: test_qc_exclusions.py  test_sample_qc.py  test_subject_qc.py  test_templating.py
tests/testing/: test_conda.py  test_data.py  test_testing.py
tests/unit/: test_conda.py  test_config.py
tests/unit/models/: test_config.py
tests/unit/parsers/: test_illumina_bpm.py  test_illumina_gtc.py  test_sample_sheet_parser.py
tests/unit/validators/: test_bgzip.py  test_bpm.py  test_gtc.py  test_sample_sheet.py
tests/validators/: test_bgzip.py  test_bpm.py  test_gtc.py  test_idat.py  test_sample_sheet.py
tests/workflow/: test_call_rate_filters.py  test_entry_points.py  test_gtc_to_plink.py  test_sample_filters.py  test_snp_filters.py
(+226 files in other folders)
