[tool.poetry]
name = "cgr_gwas_qc"
version = "1.2.0"
description = "The CGR GWAS QC Pipeline"
authors = [
    "Justin Fear <justin.fear@nih.gov>",
    "Jiahui Wang <jiahui.wang2@nih.gov>",
    "Jai Liu <jia.liu3@nih.gov>",
    "Eric Karlins",
    "Bari Ballew <bari.ballew@nih.gov>",
    "Cameron Palmer <cameron.palmer@nih.gov>",
    "Bin Zhu <bin.zhu2@nih.gov>",
]
readme = "README.md"
repository = "http://10.133.130.114/jfear/GwasQcPipeline"
keywords = ["GWAS", "cancer", "QC", "snakemake"]
packages = [
    { include = "cgr_gwas_qc", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
pandas = "^2.0.3"
snakemake = "^6.0.0"
pysam = "^0.21.0"
ryd = "^0.7.1"
pydantic = "^1.10.12"
networkx = "^3.1"
Jinja2 = "^3.1.2"
more-itertools = "^10.1.0"
seaborn = "^0.12.2"
python-ternary = "^1.0.8"
tabulate = "^0.8.0"
openpyxl = "^3.1.2"
markupsafe = "^2.1.3"
sphinx-prompt = "^1.0.0"

[tool.poetry.dev-dependencies]
black = { version = "^19.10b0", allow-prereleases = true }
flake8 = { version = "^5.0.0", python = ">=3.8,<4.0"}
snakefmt = "^0.1.4"
importlib-metadata = "^3.10.1"
pytest = "^7.4.1"
sphinx = "^4.0.0"
mypy = "^1.5.1"
isort = "^5.12.0"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-rtd-theme = "^1.3.0"
pre-commit = "^3.4.0"
rstcheck = "^5.0.0"
ipykernel = "^6.25.2"
pytest-xdist = "^3.3.1"
commitizen = "^2.0.0"
ptvsd = "^4.3.2"
rope = "^1.9.0"
pytest-mock = "^3.11.1"
sphinx-pydantic = "^0.1.1"
sphinx-jsonschema = "^1.19.1"
Pillow = "^10.0.0"
Sphinx-Substitution-Extensions = "^2022.2.16"
sphinx-click = "^5.0.1"
# tomli = "^2.0.1"      # req'd for 'codespell'

[tool.poetry.scripts]
cgr = "cgr_gwas_qc.cli:app"
legacy_compare = "cgr_gwas_qc.scripts.legacy_compare:app"

# [tool.codespell]
# skip = "*.po,*.ts,poetry.lock"
# # count =
# quiet-level = 3

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "regression: Functional tests to compare with outputs from legacy workflow.",
    "workflow: Snakemake workflow tests, partial integration tests for snakemake modules.",
    "real_data: Mark test to run if we can use real internal data.",
    "slow: Marks tests that take a really long time to run."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
